app/main/default/objects/OAH_Task__c/fields/Assigned_To__c.field-meta.xml
<CustomObject>
    <fields>
        <fullName>Assigned_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assigned To</label>
        <lookupFilter>
            <active>false</active>
            <filterItems>
                <field>User.Division</field>
                <operation>equals</operation>
                <value>OAH</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>OAH_Tasks</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>