app/main/default/objects/OAH_Task__c/fields/Assigned_to_Me__c.field-meta.xml
<CustomObject>
    <fields>
        <fullName>Assigned_to_Me__c</fullName>
        <formula>IF (Assigned_To__c = $User.Id, True, False)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Assigned_to_Me</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>