app/main/default/objects/OAH_Task__c/fields/Delegated_by_me__c.field-meta.xml
<CustomObject>
    <fields>
        <fullName>Delegated_by_me__c</fullName>
        <formula>IF(From__c = $User.Id , True, False)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Delegated_by_me</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>