app/main/default/objects/OAH_Task__c/fields/Due_Date__c.field-meta.xml
<CustomObject>
    <fields>
        <fullName>Due_Date__c</fullName>
        <label>Due Date</label>
        <type>DateTime</type>
    </fields>
</CustomObject>