app/main/default/objects/OAH_Task__c/fields/From__c.field-meta.xml
<CustomObject>
    <fields>
        <fullName>From__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>From</label>
        <referenceTo>User</referenceTo>
        <relationshipName>OAH_Tasks1</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>