app/main/default/objects/OAH_Task__c/fields/Notes__c.field-meta.xml
<CustomObject>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
</CustomObject>