app/main/default/objects/OAH_Task__c/fields/Notify_Sender_of_Completion__c.field-meta.xml
<CustomObject>
    <fields>
        <fullName>Notify_Sender_of_Completion__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Notify Sender of Completion</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>