app/main/default/objects/OAH_Task__c/fields/OAH_Case_Name__c.field-meta.xml
<CustomObject>
    <fields>
        <fullName>OAH_Case_Name__c</fullName>
        <formula>OAH_Case_Number__r.Case_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>OAH Case Name</label>
        <type>Text</type>
    </fields>
</CustomObject>