app/main/default/objects/OAH_Task__c/fields/OAH_Event__c.field-meta.xml
<CustomObject>
    <fields>
        <fullName>OAH_Event__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>OAH Event</label>
        <referenceTo>OAH_Event__c</referenceTo>
        <relationshipLabel>OAH Tasks</relationshipLabel>
        <relationshipName>OAH_Tasks</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>