app/main/default/objects/OAH_Task__c/fields/Subject__c.field-meta.xml
<CustomObject>
    <fields>
        <fullName>Subject__c</fullName>
        <label>Subject</label>
        <type>TextArea</type>
    </fields>
</CustomObject>