app/main/default/objects/OAH_Task__c/fields/Task_Name__c.field-meta.xml
<CustomObject>
    <fields>
        <fullName>Task_Name__c</fullName>
        <label>Task Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
</CustomObject>