app/main/default/objects/OAH_Task__c/listViews/All_Open_Tasks.listView-meta.xml
<CustomObject>
    <listViews>
        <fullName>All_Open_Tasks</fullName>
        <columns>NAME</columns>
        <columns>OAH_Case_Number__c</columns>
        <columns>OAH_Case_Name__c</columns>
        <columns>Task_Name__c</columns>
        <columns>Assigned_To__c</columns>
        <columns>From__c</columns>
        <columns>Status__c</columns>
        <columns>Due_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Completed,Deferred</value>
        </filters>
        <label>All Open Tasks</label>
    </listViews>
</CustomObject>