app/main/default/objects/OAH_Task__c/listViews/All_Tasks.listView-meta.xml
<CustomObject>
    <listViews>
        <fullName>All_Tasks</fullName>
        <columns>NAME</columns>
        <columns>Due_Date__c</columns>
        <columns>Status__c</columns>
        <columns>Assigned_To__c</columns>
        <columns>From__c</columns>
        <columns>OAH_Case_Number__c</columns>
        <columns>OAH_Case_Name__c</columns>
        <columns>Task_Name__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Tasks</label>
    </listViews>
</CustomObject>