app/main/default/objects/OAH_Task__c/listViews/Delegated_by_Me.listView-meta.xml
<CustomObject>
    <listViews>
        <fullName>Delegated_by_Me</fullName>
        <columns>NAME</columns>
        <columns>Task_Name__c</columns>
        <columns>Due_Date__c</columns>
        <columns>Status__c</columns>
        <columns>Assigned_To__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Delegated_by_me__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Delegated by Me</label>
    </listViews>
</CustomObject>