app/main/default/objects/OAH_Task__c/listViews/My_Completed_Tasks.listView-meta.xml
<CustomObject>
    <listViews>
        <fullName>My_Completed_Tasks</fullName>
        <columns>NAME</columns>
        <columns>Task_Name__c</columns>
        <columns>Assigned_To__c</columns>
        <columns>Due_Date__c</columns>
        <columns>From__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Completed</value>
        </filters>
        <label>My Completed Tasks</label>
    </listViews>
</CustomObject>