app/main/default/objects/OAH_Task__c/listViews/My_Tasks.listView-meta.xml
<CustomObject>
    <listViews>
        <fullName>My_Tasks</fullName>
        <columns>NAME</columns>
        <columns>Task_Name__c</columns>
        <columns>Due_Date__c</columns>
        <columns>Status__c</columns>
        <columns>From__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Assigned_to_Me__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Completed</value>
        </filters>
        <label>Assigned to Me and Active</label>
    </listViews>
</CustomObject>